--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,52 @@
+# Django list
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+media
+
+# Python list
+*.py[cod]
+*$py.class
+*.so
+*.pyd
+*.swp
+*.bak
+*.bak
+*.cache
+*.py[cod]
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+*.egg
+.mr.developer.cfg
+bin
+local
+wheels
+
+# editor list
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swo
+.DS_Store
+
+# my custom list
 /venv
 /.vscode
+/.env
+/data
